--- a/styles/blocks.css
+++ b/styles/blocks.css
@@ -1,9 +1,11 @@
 /* PAGE */
+html, body, #root {
+  height: 100%;
+}
+
 .background {
-  width: 100vw;
-  height: 100vh;
-  min-height: 100vh;
-  min-width: 100vw;
+  width: 100%;
+  height: 100%;
 
   position: fixed;
   top: 0;
