Update copywriting; Update spacing on page margins

--- a/styles/blocks.css
+++ b/styles/blocks.css
@@ -110,7 +110,7 @@ html, body, #root {
 
 .img-wrapper {
   margin-block-start: var(--space-xl);
-  margin-block-end: var(--space-2xl);
+  padding-block-end: var(--space-2xl);
   display: flex;
   flex-direction: column;
   place-items: center;
@@ -118,7 +118,7 @@ html, body, #root {
 }
 
 .img-wrapper img {
-  max-width: 60ch;
+  max-width: min(100% 60ch);
   border-radius: 0.375rem;
   overflow: hidden;
 }
